--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
@@ -22,6 +24,8 @@
                 <data android:mimeType="alim/code" />
             </intent-filter>
         </service>
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
     </application>
 
